tdf#124652 Guard Gtk3KDE5FolderPicker::execute with SolarMutexGuard

S.a. commit 8dbe0af729c9e054135a0f41706165033441f867 which already
did the same for Gtk3KDE5FilePicker.

Change-Id: I35f837b7b8fdaebc5625ff8ea5e20b3f48a3b4ec